less/services.less
.services {
    display: block;
    font-size: 0;
    margin: 3.5rem -1.5rem 0;

    &__link {
        display: inline-block;
        vertical-align: top;
        font-size: 0;
        box-sizing: border-box;
        padding: 1.5rem;
        width: 50%;
        position: relative;
        z-index: 1;

        &:hover {
            &:after {
                display: block;
                cursor: pointer;
            }

            .services-description {
                display: block;
            }
        }

        &:after {
            content: "";
            display: none;
            position: absolute;
            top: 1.5rem;
            right:  1.5rem;
            bottom:  1.5rem;
            left:  1.5rem;
            background: #000;
            opacity: 0.5;
            z-index: 2;
        }
    }

    &__image {
        width: auto;
    }
}

.services-description {
    z-index: 3;
    display: none;
    text-transform: uppercase;
    color: #fff;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    width: 100%;
    text-align: center;

    &__title {
        font-size: 1.8rem;
        margin-top: 1.5rem;
    }

    &__subtitle {
        font-size: 1.2rem;
    }
}

.services-top {
    display: block;
    font-size: 0;
}

.services-top-title {
    display: inline-block;
    width: 20%;
}

.services-menu {
    display: inline-block;
    width: 80%;
    text-align: right;
    font-size: 1.4rem;

    &__list {
        list-style-type: none;
    }

    &__item {
        display: inline-block;
    }

    &__link {
        font-size: 1.2rem;
        font-weight: 300;
        color: #000;
        text-decoration: none;
        padding: 0 1.5rem;

        &_active {
            font-weight: 600;
        }
    }
}

@media (max-width: 767px) {
    .services {
        &__link {
            text-align: center;
            width: 100%;
            padding: 1rem;

            &:after {
                display: block;
                top: 1rem;
                right:  1rem;
                bottom:  1rem;
                left:  1rem;
            }
        }
    }

    .services-top-title {
        display: block;
        width: 100%;
    }

    .services-menu {
        display: block;
        width: 100%;

        &__item {
            display: block;
            text-align: center;
            padding: 1rem 0;
        }
    }
    .services-description {
        display: block;
    }
}

